Fix unused function warning in RemoteRenderingBackend.cpp https://bugs.webkit.org/show_bug.cgi?id=255410

Unreviewed build fix.

The function `handleFromBuffer` was only used in `PLATFORM(COCOA)` code.

* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:

Canonical link: https://commits.webkit.org/262930@main